--- a/src/ui/public/styles/base.less
+++ b/src/ui/public/styles/base.less
@@ -94,6 +94,7 @@ ul.navbar-inline li {
   .flex-parent(@shrink: 0);
   position: relative;
   z-index: 0;
+  background-color: #fff;
 }
 
 .top-fixed {
